--- a/website/langs/es.json
+++ b/website/langs/es.json
@@ -283,7 +283,7 @@
     "index-token-h2": "Comunidades Duraderas",
     "index-token-p1": "Podrás apoyar a tus grupos favoritos con los futuros Vales Comunitarios.",
     "index-token-p2": "Los vales costearán los servidores para que tus comunidades sigan siendo libres e independientes.",
-    "index-token-cta": "Descubre más y <strong>obtén tu NFT gratuito</strong><br>por participar en las pruebas.",
+    "index-token-cta": "Descubre más y <strong>obtén tu NFT gratuito</strong> por participar en las pruebas.",
     "index-roadmap-h2": "Ruta SimpleX hacía el Internet Libre",
     "index-roadmap-2025": "2025",
     "index-roadmap-2025-title": "Escalar a Comunidades Grandes",
