--- a/website/langs/hu.json
+++ b/website/langs/hu.json
@@ -283,7 +283,7 @@
     "index-token-h2": "Időtálló közösségek",
     "index-token-p1": "A jövőben közösségi utalványokkal támogathatja a kedvenc csoportjait.",
     "index-token-p2": "Az utalványokkal fizetni tudja a kiszolgálókat, hogy a közösségek szabadok és függetlenek maradhassanak.",
-    "index-token-cta": "Tudjon meg többet, és <strong>szerezzen ingyenes NFT-t</strong><br>az előzetes tesztelésért.",
+    "index-token-cta": "Tudjon meg többet, és <strong>szerezzen ingyenes NFT-t</strong> az előzetes tesztelésért.",
     "index-roadmap-h2": "A SimpleX ütemterve a szabad internethez",
     "index-roadmap-2025": "2025",
     "index-roadmap-2025-title": "Skálázódás nagy közösségekre",
