--- a/website/langs/ru.json
+++ b/website/langs/ru.json
@@ -283,7 +283,7 @@
     "index-token-h2": "Стабильные Сообщества",
     "index-token-p1": "Вы сможете поддерживать Ваши любимые группы с помощью будущих Ваучеров Групп.",
     "index-token-p2": "Ваучеры будут использоваться для оплаты за серверы, чтобы группы оставались свободными и независимыми.",
-    "index-token-cta": "Узнайте больше и <strong> возьмите бесплатный NFT</strong>, чтобы участвовать в тестировании.",
+    "index-token-cta": "Узнайте больше и <strong> возьмите бесплатный пропуск</strong>, чтобы участвовать в тестировании.",
     "index-roadmap-h2": "Путь Сети SimpleX к Свободному Интернету",
     "index-roadmap-2025": "2025",
     "index-roadmap-2025-title": "Большие каналы и группы",
