--- a/website/langs/en.json
+++ b/website/langs/en.json
@@ -241,6 +241,7 @@
     "docs-dropdown-11": "FAQ",
     "docs-dropdown-12": "Security",
     "docs-dropdown-14": "SimpleX for business",
+    "docs-dropdown-15": "Verify & reproduce builds",
     "newer-version-of-eng-msg": "There is a newer version of this page in English.",
     "click-to-see": "Click to see",
     "menu": "Menu",
